--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heroes_df = p\n",
+    "heroes_df = pd.read_csv('heroes_information.csv')\n",
     "powers_df = None"
    ]
   },
