--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heroes"
+   ]
   },
   {
    "cell_type": "markdown",
