--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -325,6 +327,15 @@
    ],
    "source": [
     "heroes_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df.info"
    ]
   },
   {
