Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,6 +383,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hearoes_df.isn"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
