Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,23 +384,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'sum'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-801412058f7a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mheroes_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misna\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'sum'"
-     ]
+     "data": {
+      "text/plain": [
+       "name           0\n",
+       "Gender         0\n",
+       "Eye color      0\n",
+       "Race           0\n",
+       "Hair color     0\n",
+       "Height         0\n",
+       "Publisher     15\n",
+       "Skin color     0\n",
+       "Alignment      0\n",
+       "Weight         2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "heroes_df.isna.sum()"
+    "heroes_df.isna().sum()"
    ]
   },
   {
