--- a/index.ipynb
+++ b/index.ipynb
@@ -433,11 +433,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name           0\n",
+       "Gender         0\n",
+       "Eye color      0\n",
+       "Race           0\n",
+       "Hair color     0\n",
+       "Height         0\n",
+       "Publisher     15\n",
+       "Skin color     0\n",
+       "Alignment      0\n",
+       "Weight         2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "heroes_df.isn"
+    "heroes_df.isna().sum()"
    ]
   },
   {
@@ -445,7 +466,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "powers_df.insa().sum()"
+   ]
   },
   {
    "cell_type": "code",
