--- a/index.ipynb
+++ b/index.ipynb
@@ -781,7 +781,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "power_df.set"
+   ]
   },
   {
    "cell_type": "code",
