Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -782,7 +782,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "power_df.set"
+    "power_df.set_index('heroe_names', inpal)"
    ]
   },
   {
