Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -782,7 +782,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "power_df.set_index('heroe_names', inpal)"
+    "power_df.set_index('heroe_names', inpalce = True)\n",
+    "heroes_df.set_index('')"
    ]
   },
   {
