Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -783,7 +783,7 @@
    "outputs": [],
    "source": [
     "power_df.set_index('heroe_names', inpalce = True)\n",
-    "heroes_df.set_index('')"
+    "heroes_df.set_index('name', inplace )"
    ]
   },
   {
