Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -792,7 +792,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joined_df = "
+    "joined_df = heroes_df.join(powers_df)"
    ]
   },
   {
