--- a/index.ipynb
+++ b/index.ipynb
@@ -792,15 +792,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "powe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "joined_df = heroes_df.join(powers_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(734, 176)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_df.shape"
+   ]
   },
   {
    "cell_type": "markdown",
