--- a/index.ipynb
+++ b/index.ipynb
@@ -857,225 +857,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Eye color</th>\n",
-       "      <th>Race</th>\n",
-       "      <th>Hair color</th>\n",
-       "      <th>Height</th>\n",
-       "      <th>Publisher</th>\n",
-       "      <th>Skin color</th>\n",
-       "      <th>Alignment</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>Agility</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Web Creation</th>\n",
-       "      <th>Reality Warping</th>\n",
-       "      <th>Odin Force</th>\n",
-       "      <th>Symbiote Costume</th>\n",
-       "      <th>Speed Force</th>\n",
-       "      <th>Phoenix Force</th>\n",
-       "      <th>Molecular Dissipation</th>\n",
-       "      <th>Vision - Cryo</th>\n",
-       "      <th>Omnipresent</th>\n",
-       "      <th>Omniscient</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>A-Bomb</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>yellow</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>No Hair</td>\n",
-       "      <td>203.0</td>\n",
-       "      <td>Marvel Comics</td>\n",
-       "      <td>-</td>\n",
-       "      <td>good</td>\n",
-       "      <td>441.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abe Sapien</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>Icthyo Sapien</td>\n",
-       "      <td>No Hair</td>\n",
-       "      <td>191.0</td>\n",
-       "      <td>Dark Horse Comics</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>good</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abin Sur</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>Ungaran</td>\n",
-       "      <td>No Hair</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>DC Comics</td>\n",
-       "      <td>red</td>\n",
-       "      <td>good</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abomination</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>green</td>\n",
-       "      <td>Human / Radiation</td>\n",
-       "      <td>No Hair</td>\n",
-       "      <td>203.0</td>\n",
-       "      <td>Marvel Comics</td>\n",
-       "      <td>-</td>\n",
-       "      <td>bad</td>\n",
-       "      <td>441.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abraxas</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>Cosmic Entity</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>-99.0</td>\n",
-       "      <td>Marvel Comics</td>\n",
-       "      <td>-</td>\n",
-       "      <td>bad</td>\n",
-       "      <td>-99.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 176 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Gender Eye color               Race Hair color  Height  \\\n",
-       "A-Bomb        Male    yellow              Human    No Hair   203.0   \n",
-       "Abe Sapien    Male      blue      Icthyo Sapien    No Hair   191.0   \n",
-       "Abin Sur      Male      blue            Ungaran    No Hair   185.0   \n",
-       "Abomination   Male     green  Human / Radiation    No Hair   203.0   \n",
-       "Abraxas       Male      blue      Cosmic Entity      Black   -99.0   \n",
-       "\n",
-       "                     Publisher Skin color Alignment  Weight Agility  \\\n",
-       "A-Bomb           Marvel Comics          -      good   441.0   False   \n",
-       "Abe Sapien   Dark Horse Comics       blue      good    65.0    True   \n",
-       "Abin Sur             DC Comics        red      good    90.0   False   \n",
-       "Abomination      Marvel Comics          -       bad   441.0   False   \n",
-       "Abraxas          Marvel Comics          -       bad   -99.0   False   \n",
-       "\n",
-       "               ...     Web Creation Reality Warping Odin Force  \\\n",
-       "A-Bomb         ...            False           False      False   \n",
-       "Abe Sapien     ...            False           False      False   \n",
-       "Abin Sur       ...            False           False      False   \n",
-       "Abomination    ...            False           False      False   \n",
-       "Abraxas        ...            False           False      False   \n",
-       "\n",
-       "            Symbiote Costume Speed Force Phoenix Force Molecular Dissipation  \\\n",
-       "A-Bomb                 False       False         False                 False   \n",
-       "Abe Sapien             False       False         False                 False   \n",
-       "Abin Sur               False       False         False                 False   \n",
-       "Abomination            False       False         False                 False   \n",
-       "Abraxas                False       False         False                 False   \n",
-       "\n",
-       "            Vision - Cryo Omnipresent Omniscient  \n",
-       "A-Bomb              False       False      False  \n",
-       "Abe Sapien          False       False      False  \n",
-       "Abin Sur            False       False      False  \n",
-       "Abomination         False       False      False  \n",
-       "Abraxas             False       False      False  \n",
-       "\n",
-       "[5 rows x 176 columns]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'insa'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-bdb1cff2462a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjoined_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsa\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'insa'"
+     ]
     }
    ],
    "source": [
-    "joined_df.head()"
+    "joined_df.ia().sum()"
    ]
   },
   {
