Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -857,24 +857,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'insa'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-bdb1cff2462a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjoined_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsa\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'insa'"
-     ]
+     "data": {
+      "text/plain": [
+       "Gender                    0\n",
+       "Eye color                 0\n",
+       "Race                      0\n",
+       "Hair color                0\n",
+       "Height                    0\n",
+       "Publisher                15\n",
+       "Skin color                0\n",
+       "Alignment                 0\n",
+       "Weight                    2\n",
+       "Agility                  74\n",
+       "Accelerated Healing      74\n",
+       "Lantern Power Ring       74\n",
+       "Dimensional Awareness    74\n",
+       "Cold Resistance          74\n",
+       "Durability               74\n",
+       "Stealth                  74\n",
+       "Energy Absorption        74\n",
+       "Flight                   74\n",
+       "Danger Sense             74\n",
+       "Underwater breathing     74\n",
+       "Marksmanship             74\n",
+       "Weapons Master           74\n",
+       "Power Augmentation       74\n",
+       "Animal Attributes        74\n",
+       "Longevity                74\n",
+       "Intelligence             74\n",
+       "Super Strength           74\n",
+       "Cryokinesis              74\n",
+       "Telepathy                74\n",
+       "Energy Armor             74\n",
+       "                         ..\n",
+       "Intuitive aptitude       74\n",
+       "Vision - Microscopic     74\n",
+       "Melting                  74\n",
+       "Wind Control             74\n",
+       "Super Breath             74\n",
+       "Wallcrawling             74\n",
+       "Vision - Night           74\n",
+       "Vision - Infrared        74\n",
+       "Grim Reaping             74\n",
+       "Matter Absorption        74\n",
+       "The Force                74\n",
+       "Resurrection             74\n",
+       "Terrakinesis             74\n",
+       "Vision - Heat            74\n",
+       "Vitakinesis              74\n",
+       "Radar Sense              74\n",
+       "Qwardian Power Ring      74\n",
+       "Weather Control          74\n",
+       "Vision - X-Ray           74\n",
+       "Vision - Thermal         74\n",
+       "Web Creation             74\n",
+       "Reality Warping          74\n",
+       "Odin Force               74\n",
+       "Symbiote Costume         74\n",
+       "Speed Force              74\n",
+       "Phoenix Force            74\n",
+       "Molecular Dissipation    74\n",
+       "Vision - Cryo            74\n",
+       "Omnipresent              74\n",
+       "Omniscient               74\n",
+       "Length: 176, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "joined_df.ia().sum()"
+    "joined_df.isna().sum()"
    ]
   },
   {
