--- a/index.ipynb
+++ b/index.ipynb
@@ -866,83 +866,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Gender                   0\n",
-       "Eye color                0\n",
-       "Race                     0\n",
-       "Hair color               0\n",
-       "Height                   0\n",
-       "Publisher                0\n",
-       "Skin color               0\n",
-       "Alignment                0\n",
-       "Weight                   0\n",
-       "Agility                  0\n",
-       "Accelerated Healing      0\n",
-       "Lantern Power Ring       0\n",
-       "Dimensional Awareness    0\n",
-       "Cold Resistance          0\n",
-       "Durability               0\n",
-       "Stealth                  0\n",
-       "Energy Absorption        0\n",
-       "Flight                   0\n",
-       "Danger Sense             0\n",
-       "Underwater breathing     0\n",
-       "Marksmanship             0\n",
-       "Weapons Master           0\n",
-       "Power Augmentation       0\n",
-       "Animal Attributes        0\n",
-       "Longevity                0\n",
-       "Intelligence             0\n",
-       "Super Strength           0\n",
-       "Cryokinesis              0\n",
-       "Telepathy                0\n",
-       "Energy Armor             0\n",
-       "                        ..\n",
-       "Intuitive aptitude       0\n",
-       "Vision - Microscopic     0\n",
-       "Melting                  0\n",
-       "Wind Control             0\n",
-       "Super Breath             0\n",
-       "Wallcrawling             0\n",
-       "Vision - Night           0\n",
-       "Vision - Infrared        0\n",
-       "Grim Reaping             0\n",
-       "Matter Absorption        0\n",
-       "The Force                0\n",
-       "Resurrection             0\n",
-       "Terrakinesis             0\n",
-       "Vision - Heat            0\n",
-       "Vitakinesis              0\n",
-       "Radar Sense              0\n",
-       "Qwardian Power Ring      0\n",
-       "Weather Control          0\n",
-       "Vision - X-Ray           0\n",
-       "Vision - Thermal         0\n",
-       "Web Creation             0\n",
-       "Reality Warping          0\n",
-       "Odin Force               0\n",
-       "Symbiote Costume         0\n",
-       "Speed Force              0\n",
-       "Phoenix Force            0\n",
-       "Molecular Dissipation    0\n",
-       "Vision - Cryo            0\n",
-       "Omnipresent              0\n",
-       "Omniscient               0\n",
-       "Length: 176, dtype: int64"
+       "(647, 176)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joined_df.isna().sum()"
+    "joined_df.shape"
    ]
   },
   {
