Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -897,7 +897,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "male_df = joined_df[]"
+    "male_df = joined_df[joined_df.]"
    ]
   },
   {
