Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1100,7 +1100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "male_df = joined_df[joined_df.Gender == \"Male\"]"
+    "male_df = joined_df[joined_df.Gender == \"Male\"]\n",
+    "female_df = joined_df[joined_df.Gender == \"Male\"]"
    ]
   },
   {
