Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1106,225 +1106,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Eye color</th>\n",
-       "      <th>Race</th>\n",
-       "      <th>Hair color</th>\n",
-       "      <th>Height</th>\n",
-       "      <th>Publisher</th>\n",
-       "      <th>Skin color</th>\n",
-       "      <th>Alignment</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>Agility</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Web Creation</th>\n",
-       "      <th>Reality Warping</th>\n",
-       "      <th>Odin Force</th>\n",
-       "      <th>Symbiote Costume</th>\n",
-       "      <th>Speed Force</th>\n",
-       "      <th>Phoenix Force</th>\n",
-       "      <th>Molecular Dissipation</th>\n",
-       "      <th>Vision - Cryo</th>\n",
-       "      <th>Omnipresent</th>\n",
-       "      <th>Omniscient</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Angel Dust</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>yellow</td>\n",
-       "      <td>Mutant</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>Marvel Comics</td>\n",
-       "      <td>-</td>\n",
-       "      <td>good</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Angel Salvadore</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>brown</td>\n",
-       "      <td>-</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>163.0</td>\n",
-       "      <td>Marvel Comics</td>\n",
-       "      <td>-</td>\n",
-       "      <td>good</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Angela</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-99.0</td>\n",
-       "      <td>Image Comics</td>\n",
-       "      <td>-</td>\n",
-       "      <td>bad</td>\n",
-       "      <td>-99.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Arachne</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>Blond</td>\n",
-       "      <td>175.0</td>\n",
-       "      <td>Marvel Comics</td>\n",
-       "      <td>-</td>\n",
-       "      <td>good</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Arclight</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>violet</td>\n",
-       "      <td>-</td>\n",
-       "      <td>Purple</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>Marvel Comics</td>\n",
-       "      <td>-</td>\n",
-       "      <td>bad</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 176 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Gender Eye color    Race Hair color  Height      Publisher  \\\n",
-       "Angel Dust       Female    yellow  Mutant      Black   165.0  Marvel Comics   \n",
-       "Angel Salvadore  Female     brown       -      Black   163.0  Marvel Comics   \n",
-       "Angela           Female         -       -          -   -99.0   Image Comics   \n",
-       "Arachne          Female      blue   Human      Blond   175.0  Marvel Comics   \n",
-       "Arclight         Female    violet       -     Purple   173.0  Marvel Comics   \n",
-       "\n",
-       "                Skin color Alignment  Weight Agility    ...     Web Creation  \\\n",
-       "Angel Dust               -      good    57.0    True    ...            False   \n",
-       "Angel Salvadore          -      good    54.0   False    ...            False   \n",
-       "Angela                   -       bad   -99.0   False    ...            False   \n",
-       "Arachne                  -      good    63.0    True    ...             True   \n",
-       "Arclight                 -       bad    57.0   False    ...            False   \n",
-       "\n",
-       "                Reality Warping Odin Force Symbiote Costume Speed Force  \\\n",
-       "Angel Dust                False      False            False       False   \n",
-       "Angel Salvadore           False      False            False       False   \n",
-       "Angela                    False      False            False       False   \n",
-       "Arachne                   False      False            False       False   \n",
-       "Arclight                  False      False            False       False   \n",
-       "\n",
-       "                Phoenix Force Molecular Dissipation Vision - Cryo Omnipresent  \\\n",
-       "Angel Dust              False                 False         False       False   \n",
-       "Angel Salvadore         False                 False         False       False   \n",
-       "Angela                  False                 False         False       False   \n",
-       "Arachne                 False                 False         False       False   \n",
-       "Arclight                False                 False         False       False   \n",
-       "\n",
-       "                Omniscient  \n",
-       "Angel Dust           False  \n",
-       "Angel Salvadore      False  \n",
-       "Angela               False  \n",
-       "Arachne              False  \n",
-       "Arclight             False  \n",
-       "\n",
-       "[5 rows x 176 columns]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'scatter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-87d83af3a39e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmale_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'scatter'"
+     ]
     }
    ],
    "source": [
-    "male_df.scatter"
+    "male_df.plot()"
    ]
   },
   {
